z-index fix for auto-complete box

--- a/css/cadus.css
+++ b/css/cadus.css
@@ -142,6 +142,7 @@
   overflow-x: hidden;
   border: 1px solid #aaa;
   background-color: white;
+  z-index:5;
 }
 
 .ol-gmg-results li{
